product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/ai-factory/gen-ai/agent-studio.mdx
---
title: Agent Studio in Hybrid Manager
navTitle: Agent Studio
description: How Agent Studio works within Hybrid Manager and how to build and manage AI Assistants.
---

**Agent Studio** in **Hybrid Manager** gives you an integrated way to create, manage, and govern **AI Assistants** running entirely within your Hybrid Manager project environment — fully aligned with your **Sovereign AI** architecture.
## Prerequisites

- Access to a Hybrid Manager project with AI Factory enabled and entitlements for Gen AI and Model Serving.
- A Knowledge Base (or data sources) you plan to use. See /edb-postgres-ai/1.3/ai-factory/pipeline/knowledge_base/.
- A model endpoint available via /edb-postgres-ai/1.3/ai-factory/model/serving/, or an approved external provider per your policy.



You can use Agent Studio to build Assistants that:

-   Interact with **models deployed through Model Serving**.
-   Retrieve content from **Knowledge Bases**.
-   Apply **Rulesets** for governance and compliance.
-   Execute **Tools** that perform actions or integrate with external systems.
-   Maintain **Threads** for stateful, auditable conversations.

> For a deeper background, see the [Agent Studio concepts page](/edb-postgres-ai/latest/ai-factory/learn/explained/assistants-explained/) in the AI Factory hub.

* * *

## How Agent Studio works in Hybrid Manager

Agent Studio components run entirely in your **Hybrid Manager project’s Kubernetes cluster**, with full observability and governance:

-   **Assistants** are defined in Agent Studio and run within your project infrastructure.
-   Assistants can call **models deployed via Model Serving** — see [Model Serving](/edb-postgres-ai/latest/ai-factory/model/serving/).
-   Assistants retrieve content from **Knowledge Bases** built within the same project — see [Knowledge Bases explained](/edb-postgres-ai/latest/ai-factory/learn/explained/knowledge-bases-explained/) and [AI Accelerator Knowledge Base page](/edb-postgres-ai/latest/ai-factory/pipeline/knowledge_base/).
-   Assistants apply **Rulesets** — defined in your Agent Studio configuration — see [Rulesets explained](/edb-postgres-ai/latest/ai-factory/learn/explained/rulesets-explained/).
-   Assistants can invoke **Tools** implemented within your project — see [Tools explained](/edb-postgres-ai/latest/ai-factory/learn/explained/tools-explained/).
-   **Threads** are captured automatically to support auditability and review — see [Threads explained](/edb-postgres-ai/latest/ai-factory/learn/explained/threads-explained/).

All these components operate under your control:

-   Data stays in your infrastructure
-   Models run on your GPUs, in your Kubernetes cluster
-   Knowledge Bases and embeddings stay in your Postgres and object storage
-   Assistant behavior is fully observable and governed through Rulesets

This supports **Sovereign AI** principles — see [Sovereign AI explained](/edb-postgres-ai/latest/ai-factory/learn/explained/sovereign-ai/).

* * *

## Typical Agent Studio flow in Hybrid Manager

1.  Define a **Knowledge Base** — [How-To: Create a Knowledge Base](/edb-postgres-ai/latest/ai-factory/learn/how-to/gen-ai/create-knowledge-base/).
2.  Create and apply **Rulesets** — [How-To: Create a Ruleset](/edb-postgres-ai/latest/ai-factory/learn/how-to/gen-ai/create-ruleset/).
3.  Define a **Retriever** to control Knowledge Base search — [How-To: Create a Retriever](/edb-postgres-ai/latest/ai-factory/learn/how-to/gen-ai/create-retriever/).
4.  Deploy **Tools** for API calls or business logic — [How-To: Create a Tool](/edb-postgres-ai/latest/ai-factory/learn/how-to/gen-ai/create-tool/).
5.  Deploy supporting **models** via Model Serving — [How-To: Deploy a NIM container](/edb-postgres-ai/latest/ai-factory/learn/how-to/model-serving/deploy-nim-container/).
6.  Create your **Assistant** in Agent Studio — [How-To: Create an Assistant](/edb-postgres-ai/latest/ai-factory/learn/how-to/gen-ai/create-assistant/).
7.  Test and validate using **Threads** — [How-To: View Threads](/edb-postgres-ai/latest/ai-factory/learn/how-to/gen-ai/view-threads/).

* * *

## Key links and learning resources

-   [Agent Studio Hub concepts page](/edb-postgres-ai/latest/ai-factory/gen-ai/agent-studio/)
-   [Create an Assistant — How-To Guide](/edb-postgres-ai/latest/ai-factory/learn/how-to/gen-ai/create-assistant/)
-   [Assistants explained](/edb-postgres-ai/latest/ai-factory/learn/explained/assistants-explained/)
-   [Rulesets explained](/edb-postgres-ai/latest/ai-factory/learn/explained/rulesets-explained/)
-   [AI Accelerator Knowledge Bases](/edb-postgres-ai/latest/ai-factory/pipeline/knowledge_base/)
-   [Tools explained](/edb-postgres-ai/latest/ai-factory/learn/explained/tools-explained/)
-   [Threads explained](/edb-postgres-ai/latest/ai-factory/learn/explained/threads-explained/)
-   [Model Serving in Hybrid Manager](../model/serving)
-   [Sovereign AI explained](/edb-postgres-ai/latest/ai-factory/learn/explained/sovereign-ai/)

* * *

**Next steps:**
After building your first Assistant, explore advanced topics in the AI Factory [Learning Paths](/edb-postgres-ai/latest/ai-factory/learn/paths/).

* * *
